# BranchOfPrivates

./: CMakeLists.txt  README.md  addeditdialog.cpp  addeditdialog.h  addeditdialog.ui  addletterdialog.cpp  addletterdialog.h  datecalc.cpp  datecalc.h  filterdialog.cpp  filterdialog.h  filterdialog.ui  letterdialog.cpp  letterdialog.h  letterdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  orderdialog.cpp  orderdialog.h  orderdialog.ui  resources.qrc  soldier.cpp  soldier.h  soldierfiles.cpp  soldierfiles.h  sortdialog.cpp  sortdialog.h  sortdialog.ui  statisticsdialog.cpp  statisticsdialog.h  statisticsdialog.ui
lib/msvc2019_32/: QXlsxQt5.lib  xlnt.lib
lib/msvc2019_64/: QXlsxQt5.lib  xlnt.lib
options/: ostanList.xlsx
